# learning-rag

./: .env.template  .gitignore  pyproject.toml  readme.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: cli.md  illm.md  ing.md  ivb.md  readme.md  workspace.dsl  workspace.json
src/: main.py
src/lib/: callbacks.py  chat.py  cli.py  ingestion.py  ingestion_pdf.py  rag_agent.py  rag_two_step.py  vector_db.py
